--- a/menu.html
+++ b/menu.html
@@ -6,11 +6,24 @@
     <style>
         /* CSS styles */
         body {
+            margin: 0;
+
+            /* Add a background checkerboard pattern so we can see transparency */
+            background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' xmlns='http://www.w3.org/2000/svg'%3E%3Crect fill='%23f0f0f0' width='100' height='100'/%3E%3Cpath d='M0 50h50v50H0z' fill='%23ddd'/%3E%3Cpath d='M50 0h50v50H50z' fill='%23ddd'/%3E%3C/svg%3E");
+            background-repeat: repeat;
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            /* Semi-transparent gray */
+            background-color: rgba(128, 128, 128, 0.7);
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
         }
 
         #settingsMenu {
@@ -21,6 +34,8 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-color: white;
+            /* Ensure menu background is opaque */
         }
 
         .menu-item {
@@ -89,7 +104,11 @@
             }
 
             display() {
-                document.body.appendChild(this.menuElement);
+                // append to the body a div with class overlay
+                document.body.appendChild(document.createElement('div')).className = 'overlay';
+
+                // append to the overlay instead of the body
+                document.querySelector('.overlay').appendChild(this.menuElement);
                 window.addEventListener('keydown', this.handleArrowKeys.bind(this));
                 this.updateSelection(0);
             }
