turning the const declaration of the menu to a var declaration so we can re-instantiate the menu easily reusing the same variable "menu".

--- a/menu.html
+++ b/menu.html
@@ -176,7 +176,7 @@
         }
 
         // Creating and displaying the menu
-        const menu = new Menu();
+        var menu = new Menu();
         menu.setTitle('Snake Game');
         menu.addBoldHeader('Top Score: 0');
         menu.addChoice('Level', ['Easy', 'Medium', 'Hard']);
