--- a/menu.html
+++ b/menu.html
@@ -54,6 +54,15 @@
             background-color: black;
             color: white;
         }
+
+        .menu-title-divider {
+            width: 100%;
+            height: 3px;
+            background-color: gray;
+            /* make the top margin 0px and the bottom margin 10 px */
+            /* the margin property is shorthand for setting the top, right, bottom, and left margins */
+            margin: 0px 0px 5px 0px;
+        }
     </style>
 </head>
 
@@ -100,6 +109,12 @@
                 this.selectableItems.push(entryElement);
                 this.menuElement.appendChild(entryElement);
                 entryElement.callback = callback; // Add a callback property to the element
+            }
+
+            addTitleDividerLine() {
+                const titleDividerElement = document.createElement('div');
+                titleDividerElement.className = 'menu-title-divider';
+                this.menuElement.appendChild(titleDividerElement);
             }
 
             display() {
@@ -178,6 +193,7 @@
         // Creating and displaying the menu
         var menu = new Menu();
         menu.setTitle('Snake Game');
+        menu.addTitleDividerLine();
         menu.addBoldHeader('Top Score: 0');
         menu.addChoice('Level', ['Easy', 'Medium', 'Hard']);
         menu.addBoldHeader('Yi');
