--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="score">Score: <span>0</span></div>
+  <div class="score">Score: <span>0</span> build: 2</div>
   <div class="grid"></div>
 </body>
 
