substituting emoji text with .svgs as emoji text doesn't show up correctly in chromium on Raspberry Pi on Dev 2023

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 <script src="./js/state-machine/game-states/GamePausedState.js"></script>
 <script src="./js/state-machine/game-states/MainMenuState.js"></script>
 <script src="./js/state-machine/game-states/SplashScreenState.js"></script>
+<script src="./js/preload-emoji-svgs.js"></script>
+
 
 <script>
 
