--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="score">Score: <span>0</span> build: 5</div>
+  <div class="score">Score: <span>0</span> build: 6</div>
   <div class="debug">Debug: <span>-</span></div>
   <div class="grid"></div>
 </body>
@@ -70,6 +70,23 @@
   document.querySelector('.debug span').textContent = 'Starting the game...';
 
   gameStateMachine.changeState(MainMenuState);
+
+
+  navigator.getBattery().then((battery) => {
+    // update the level info immediately
+    updateLevelInfo();
+
+    // ... and then again whenever the level changes
+    battery.addEventListener("levelchange", () => {
+      updateLevelInfo();
+    });
+    
+    function updateLevelInfo() {
+      document.querySelector('.debug span').textContent = `Battery level: ${battery.level * 100}%`;
+    }
+
+  });
+
 
 </script>
 
