--- a/index.html
+++ b/index.html
@@ -19,27 +19,27 @@
 </body>
 
 <script src="./libs/Tone.min.14.8.49.js"></script>
-<script src="./js/sketches/snake/Cell.js"></script>
-<script src="./js/sketches/snake/SnakeSketch.js"></script>
-<script src="./js/sketches/snake/Grid.js"></script>
+<script src="./js/sketches/snake-game/Cell.js"></script>
+<script src="./js/sketches/snake-game/SnakeGame.js"></script>
+<script src="./js/sketches/snake-game/Grid.js"></script>
 <script src="./js/Sound.js"></script>
-<script src="./js/sketches/snake/Snake.js"></script>
-<script src="./js/sketches/snake/Food.js"></script>
+<script src="./js/sketches/snake-game/Snake.js"></script>
+<script src="./js/sketches/snake-game/Food.js"></script>
 <script src="./js/InputHandler.js"></script>
-<script src="./js/sketches/snake/SnakeDirection.js"></script>
+<script src="./js/sketches/snake-game/SnakeDirection.js"></script>
 
 <script src="./js/Menu.js"></script>
 
 <script src="./js/state-machine/AppState.js"></script>
 <script src="./js/state-machine/AppStateMachine.js"></script>
 
-<script src="./js/sketches/snake/states/SnakeSketchPlayingState.js"></script>
-<script src="./js/sketches/snake/states/SnakeSketchOptionsState.js"></script>
-<script src="./js/sketches/snake/states/SnakeSketchGameOverState.js"></script>
-<script src="./js/sketches/snake/states/SnakeSketchPausedState.js"></script>
-<script src="./js/sketches/snake/states/SnakeSketchMainMenuState.js"></script>
-<script src="./js/sketches/snake/states/SnakeSketchSplashScreenState.js"></script>
-<script src="./js/sketches/snake/preload-emoji-svgs.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGamePlayingState.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGameOptionsState.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGameGameOverState.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGamePausedState.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGameMainMenuState.js"></script>
+<script src="./js/sketches/snake-game/states/SnakeGameSplashScreenState.js"></script>
+<script src="./js/sketches/snake-game/preload-emoji-svgs.js"></script>
 
 
 <script>
@@ -47,14 +47,14 @@
   const gameStateMachine = new AppStateMachine();
 
   // Define transitions
-  // gameStateMachine.addTransition(SnakeSketchSplashScreenState, SnakeSketchMainMenuState);
-  //gameStateMachine.addTransition(SnakeSketchMainMenuState, SnakeSketchOptionsState);
-  gameStateMachine.addTransition(SnakeSketchMainMenuState, SnakeSketchPlayingState);
-  gameStateMachine.addTransition(SnakeSketchPlayingState, SnakeSketchPausedState);
-  gameStateMachine.addTransition(SnakeSketchPlayingState, SnakeSketchGameOverState);
-  gameStateMachine.addTransition(SnakeSketchPausedState, SnakeSketchPlayingState);
-  gameStateMachine.addTransition(SnakeSketchPausedState, SnakeSketchMainMenuState);
-  gameStateMachine.addTransition(SnakeSketchGameOverState, SnakeSketchMainMenuState);
+  // gameStateMachine.addTransition(SnakeGameSplashScreenState, SnakeGameMainMenuState);
+  //gameStateMachine.addTransition(SnakeGameMainMenuState, SnakeGameOptionsState);
+  gameStateMachine.addTransition(SnakeGameMainMenuState, SnakeGamePlayingState);
+  gameStateMachine.addTransition(SnakeGamePlayingState, SnakeGamePausedState);
+  gameStateMachine.addTransition(SnakeGamePlayingState, SnakeGameGameOverState);
+  gameStateMachine.addTransition(SnakeGamePausedState, SnakeGamePlayingState);
+  gameStateMachine.addTransition(SnakeGamePausedState, SnakeGameMainMenuState);
+  gameStateMachine.addTransition(SnakeGameGameOverState, SnakeGameMainMenuState);
 
 
   // Define the dimensions and cell size for the grid
@@ -63,13 +63,13 @@
   const cellSize = 20;
   const initialInterval = 200;
 
-  // Create the SnakeSketch instance
-  const game = new SnakeSketch(gridWidth, gridHeight, cellSize, initialInterval);
+  // Create the SnakeGame instance
+  const game = new SnakeGame(gridWidth, gridHeight, cellSize, initialInterval);
 
   // add to the debug div that we are starting the game
   document.querySelector('.debug span').textContent = 'Starting the game...';
 
-  gameStateMachine.changeState(SnakeSketchMainMenuState);
+  gameStateMachine.changeState(SnakeGameMainMenuState);
 
 
   navigator.getBattery().then((battery) => {
