--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <div class="score">Score: <span>0</span> build: 6</div>
-  <div class="debug">Debug: <span>-</span></div>
+  <div class="score">Score: <span>0</span></div>
+  <!-- <div class="debug">Debug: <span>-</span></div> -->
   <div class="grid"></div>
 </body>
 
@@ -67,7 +67,7 @@
   const game = new SnakeGame(gridWidth, gridHeight, cellSize, initialInterval);
 
   // add to the debug div that we are starting the game
-  document.querySelector('.debug span').textContent = 'Starting the game...';
+  //document.querySelector('.debug span').textContent = 'Starting the game...';
 
   gameStateMachine.changeState(SnakeGameMainMenuState);
 
