--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <script src="./js/state-machine/AppState.js"></script>
 <script src="./js/state-machine/AppStateMachine.js"></script>
 
+<script src="./js/top-level-menu/states/TopLevelMenuState.js"></script>
+
 <script src="./js/sketches/snake-game/states/SnakeGamePlayingState.js"></script>
 <script src="./js/sketches/snake-game/states/SnakeGameOptionsState.js"></script>
 <script src="./js/sketches/snake-game/states/SnakeGameGameOverState.js"></script>
@@ -46,36 +48,26 @@
   // Define transitions
   // gameStateMachine.addTransition(SnakeGameSplashScreenState, SnakeGameMainMenuState);
   //gameStateMachine.addTransition(SnakeGameMainMenuState, SnakeGameOptionsState);
+  gameStateMachine.addTransition(TopLevelMenuState, SnakeGameMainMenuState);
   gameStateMachine.addTransition(SnakeGameMainMenuState, SnakeGamePlayingState);
+  gameStateMachine.addTransition(SnakeGameMainMenuState, TopLevelMenuState);
   gameStateMachine.addTransition(SnakeGamePlayingState, SnakeGamePausedState);
   gameStateMachine.addTransition(SnakeGamePlayingState, SnakeGameGameOverState);
   gameStateMachine.addTransition(SnakeGamePausedState, SnakeGamePlayingState);
+  gameStateMachine.addTransition(SnakeGamePausedState, TopLevelMenuState);
   gameStateMachine.addTransition(SnakeGamePausedState, SnakeGameMainMenuState);
   gameStateMachine.addTransition(SnakeGameGameOverState, SnakeGameMainMenuState);
+  gameStateMachine.addTransition(SnakeGameGameOverState, TopLevelMenuState);
+  
 
 
-  // start populating the body with what we need for the snake game
-  document.body.innerHTML = `
-    <div class="debug">
-      <span></span>
-    </div>
-    <div class="score">Score: <span>0</span></div>
-    <div class="grid"></div>
-  `;
-
-  // Define the dimensions and cell size for the grid
-  const gridWidth = 25;
-  const gridHeight = 20;
-  const cellSize = 20;
-  const initialInterval = 200;
-
-  // Create the SnakeGame instance
-  var game = new SnakeGame(gridWidth, gridHeight, cellSize, initialInterval);
+  var game;
+  var inputHandler = new InputHandler();
 
   // add to the debug div that we are starting the game
   //document.querySelector('.debug span').textContent = 'Starting the game...';
 
-  gameStateMachine.changeState(SnakeGameMainMenuState);
+  gameStateMachine.changeState(TopLevelMenuState);
 
 
   /*
