sound system is now a global thing rather than something attached to a game/sketch

--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
   var game;
   var inputHandler = new InputHandler();
+  var soundSystem = new Sound();
 
   // add to the debug div that we are starting the game
   //document.querySelector('.debug span').textContent = 'Starting the game...';
