Sound wasn't quite working, so replacing Tone.js with Howler.js and just using baked mp3s

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 <body>
 </body>
 
-<script src="./libs/Tone.min.14.8.49.js"></script>
+<!--<script src="./libs/Tone.min.14.8.49.js"></script> -->
+<script src="./libs/howler.core.min.2.2.4.js"></script>
+
+
 <script src="./js/sketches/snake-game/Cell.js"></script>
 <script src="./js/sketches/snake-game/SnakeGame.js"></script>
 <script src="./js/sketches/snake-game/Grid.js"></script>
@@ -48,9 +51,9 @@
 
 <script src="./js/sketches/snake-game/preload-emoji-svgs.js"></script>
 
-<script src="./music-data/topl-level-menu-music.js"></script>
-<script src="./music-data/snake-music.js"></script>
-<script src="./music-data/tetris-music.js"></script>
+<!--<script src="./music-data/topl-level-menu-music.js"></script>-->
+<!--<script src="./music-data/snake-music.js"></script>-->
+<!--<script src="./music-data/tetris-music.js"></script>-->
 
 <script src="./js/sketches/tetris-game/tetris-game.js"></script>
 
